--- a/app/Components/AddForm/templates/default.latte
+++ b/app/Components/AddForm/templates/default.latte
@@ -2,6 +2,9 @@
     <div class="form-group">
         {input pageId, class => 'form-control'}
     </div>
+    <div class="form-group">
+        {input twitterId, class => 'form-control'}
+    </div>
     {input submit, class => 'btn btn-default'}
 {/form}
 
